[gd_scene load_steps=156 format=2]

[ext_resource path="res://img/Персонажи/vhead_walking.png" type="Texture" id=1]
[ext_resource path="res://img/Персонажи/vhead_staying.png" type="Texture" id=2]
[ext_resource path="res://Peasant.gd" type="Script" id=3]
[ext_resource path="res://img/Персонажи/main/full_diseases/Peasant1_stay_podagra (1).png" type="Texture" id=4]
[ext_resource path="res://img/Персонажи/main/full_diseases/Peasant1_stay_burn_full.png" type="Texture" id=5]
[ext_resource path="res://img/Персонажи/main/Peasant1_death (2).png" type="Texture" id=6]
[ext_resource path="res://img/Персонажи/main/Peasant1_staying.png" type="Texture" id=7]
[ext_resource path="res://img/Персонажи/main/full_diseases/Peasant1_stay_gangrene_full.png" type="Texture" id=8]
[ext_resource path="res://img/Персонажи/main/full_diseases/Peasant1_stay_open wound_full.png" type="Texture" id=9]
[ext_resource path="res://img/Персонажи/main/Peasant1_walking.png" type="Texture" id=10]
[ext_resource path="res://img/Персонажи/main/full_diseases/Peasant1_walk_gangrene_full.png" type="Texture" id=11]
[ext_resource path="res://img/Персонажи/main/full_diseases/Peasant1_walk_podagra (2).png" type="Texture" id=12]
[ext_resource path="res://img/Персонажи/main/full_diseases/Peasant1_walk_open wound_full.png" type="Texture" id=13]
[ext_resource path="res://img/Персонажи/main/full_diseases/Peasant1_walk_burn_full.png" type="Texture" id=14]
[ext_resource path="res://img/Персонажи/main/full_diseases/Peasant1_death_burn_full.png" type="Texture" id=15]
[ext_resource path="res://sound/Здоровый пациент уходит.wav" type="AudioStream" id=16]
[ext_resource path="res://sound/Осмотр пациента.wav" type="AudioStream" id=17]
[ext_resource path="res://sound/Осмотр пациента2.wav" type="AudioStream" id=18]
[ext_resource path="res://sound/Осмотр пациента3.wav" type="AudioStream" id=19]
[ext_resource path="res://sound/Осмотр пациента5.wav" type="AudioStream" id=20]
[ext_resource path="res://sound/Осмотр пациента4.wav" type="AudioStream" id=21]
[ext_resource path="res://sound/Осмотр пациента6.wav" type="AudioStream" id=22]
[ext_resource path="res://sound/Удачное лечение пациента.wav" type="AudioStream" id=23]
[ext_resource path="res://sound/Неверное лечение.wav" type="AudioStream" id=24]
[ext_resource path="res://sound/Пациент умер и упал.wav" type="AudioStream" id=25]
[ext_resource path="res://sound/Пациент умер2.wav" type="AudioStream" id=26]
[ext_resource path="res://sound/Пациент умер.wav" type="AudioStream" id=27]
[ext_resource path="res://img/Персонажи/main/full_diseases/Peasant1_death_gangrene_full.png" type="Texture" id=28]
[ext_resource path="res://img/Персонажи/main/Peasant1_death_gloom.png" type="Texture" id=29]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 750, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1500, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2250, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 3000, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 750, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1500, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 2250, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 3000, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 3750, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 4500, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 5250, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 29 )
region = Rect2( 0, 0, 1353, 1353 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 29 )
region = Rect2( 1353, 0, 1353, 1353 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 29 )
region = Rect2( 2706, 0, 1353, 1353 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 29 )
region = Rect2( 4059, 0, 1353, 1353 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 29 )
region = Rect2( 5412, 0, 1353, 1353 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 29 )
region = Rect2( 6765, 0, 1353, 1353 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 29 )
region = Rect2( 8118, 0, 1353, 1353 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 29 )
region = Rect2( 9471, 0, 1353, 1353 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 29 )
region = Rect2( 10824, 0, 1353, 1353 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 750, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1500, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2250, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 3000, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 1353, 1353 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1353, 0, 1353, 1353 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 2706, 0, 1353, 1353 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 4059, 0, 1353, 1353 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 5412, 0, 1353, 1353 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 6765, 0, 1353, 1353 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 8118, 0, 1353, 1353 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 9471, 0, 1353, 1353 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 10824, 0, 1353, 1353 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 750, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 1500, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 2250, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 3000, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 1353, 1353 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1353, 0, 1353, 1353 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 2706, 0, 1353, 1353 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 4059, 0, 1353, 1353 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 5412, 0, 1353, 1353 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 6765, 0, 1353, 1353 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 8118, 0, 1353, 1353 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 9471, 0, 1353, 1353 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 10824, 0, 1353, 1353 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 28 )
region = Rect2( 0, 0, 1353, 1353 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 28 )
region = Rect2( 1353, 0, 1353, 1353 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 28 )
region = Rect2( 2706, 0, 1353, 1353 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 28 )
region = Rect2( 4059, 0, 1353, 1353 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 28 )
region = Rect2( 5412, 0, 1353, 1353 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 28 )
region = Rect2( 6765, 0, 1353, 1353 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 28 )
region = Rect2( 8118, 0, 1353, 1353 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 28 )
region = Rect2( 9471, 0, 1353, 1353 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 28 )
region = Rect2( 10824, 0, 1353, 1353 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 750, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 1500, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 2250, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 3000, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 750, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1500, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 2250, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 3000, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 750, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1500, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=73]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 2250, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=74]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 3000, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=75]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=76]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 750, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=77]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 1500, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=78]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 2250, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=79]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 3000, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=80]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 3750, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=81]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 4500, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=82]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 5250, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=83]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 1353, 1353 )

[sub_resource type="AtlasTexture" id=84]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 1353, 0, 1353, 1353 )

[sub_resource type="AtlasTexture" id=85]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 2706, 0, 1353, 1353 )

[sub_resource type="AtlasTexture" id=86]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 4059, 0, 1353, 1353 )

[sub_resource type="AtlasTexture" id=87]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 5412, 0, 1353, 1353 )

[sub_resource type="AtlasTexture" id=88]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 6765, 0, 1353, 1353 )

[sub_resource type="AtlasTexture" id=89]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 8118, 0, 1353, 1353 )

[sub_resource type="AtlasTexture" id=90]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 9471, 0, 1353, 1353 )

[sub_resource type="AtlasTexture" id=91]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 10824, 0, 1353, 1353 )

[sub_resource type="AtlasTexture" id=92]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=93]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 750, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=94]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 1500, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=95]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 2250, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=96]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 3000, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=97]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 3750, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=98]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 4500, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=99]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 5250, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=100]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=101]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 750, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=102]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 1500, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=103]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 2250, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=104]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 3000, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=105]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 3750, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=106]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 4500, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=107]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 5250, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=108]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=109]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 750, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=110]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1500, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=111]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 2250, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=112]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 3000, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=113]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 3750, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=114]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 4500, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=115]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 5250, 0, 750, 1353 )

[sub_resource type="AtlasTexture" id=116]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 706, 1353 )

[sub_resource type="AtlasTexture" id=117]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 706, 0, 706, 1353 )

[sub_resource type="AtlasTexture" id=118]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 1412, 0, 706, 1353 )

[sub_resource type="AtlasTexture" id=119]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 2118, 0, 706, 1353 )

[sub_resource type="AtlasTexture" id=120]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 2824, 0, 706, 1353 )

[sub_resource type="SpriteFrames" id=121]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "vhead_stay",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "healthy",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 22 ), SubResource( 22 ), SubResource( 22 ), SubResource( 22 ), SubResource( 22 ), SubResource( 22 ), SubResource( 22 ), SubResource( 22 ), SubResource( 22 ), SubResource( 22 ), SubResource( 22 ), SubResource( 22 ), SubResource( 22 ) ],
"loop": true,
"name": "open_cutDeath",
"speed": 10.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "idlepadagra",
"speed": 5.0
}, {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 36 ), SubResource( 36 ), SubResource( 36 ), SubResource( 36 ), SubResource( 36 ), SubResource( 36 ), SubResource( 36 ), SubResource( 36 ), SubResource( 36 ), SubResource( 36 ), SubResource( 36 ), SubResource( 36 ), SubResource( 36 ) ],
"loop": true,
"name": "healthyDeath",
"speed": 10.0
}, {
"frames": [ SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ) ],
"loop": true,
"name": "idleopen_cut",
"speed": 5.0
}, {
"frames": [ SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ), SubResource( 50 ) ],
"loop": true,
"name": "padagraDeath",
"speed": 10.0
}, {
"frames": [ SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 59 ), SubResource( 59 ), SubResource( 59 ), SubResource( 59 ), SubResource( 59 ), SubResource( 59 ), SubResource( 59 ), SubResource( 59 ), SubResource( 59 ), SubResource( 59 ), SubResource( 59 ), SubResource( 59 ), SubResource( 59 ) ],
"loop": true,
"name": "necrosisDeath",
"speed": 10.0
}, {
"frames": [ SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ) ],
"loop": true,
"name": "idlenecrosis",
"speed": 5.0
}, {
"frames": [ SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ) ],
"loop": true,
"name": "idleburns",
"speed": 5.0
}, {
"frames": [ SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ) ],
"loop": true,
"name": "idlehealthy",
"speed": 5.0
}, {
"frames": [ SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ) ],
"loop": true,
"name": "burns",
"speed": 5.0
}, {
"frames": [ SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 91 ), SubResource( 91 ), SubResource( 91 ), SubResource( 91 ), SubResource( 91 ), SubResource( 91 ), SubResource( 91 ), SubResource( 91 ), SubResource( 91 ), SubResource( 91 ), SubResource( 91 ), SubResource( 91 ), SubResource( 91 ) ],
"loop": true,
"name": "burnsDeath",
"speed": 10.0
}, {
"frames": [ SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ) ],
"loop": true,
"name": "open_cut",
"speed": 5.0
}, {
"frames": [ SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ), SubResource( 105 ), SubResource( 106 ), SubResource( 107 ) ],
"loop": true,
"name": "necrosis",
"speed": 5.0
}, {
"frames": [ SubResource( 108 ), SubResource( 109 ), SubResource( 110 ), SubResource( 111 ), SubResource( 112 ), SubResource( 113 ), SubResource( 114 ), SubResource( 115 ) ],
"loop": true,
"name": "vhead_walk",
"speed": 8.0
}, {
"frames": [ SubResource( 116 ), SubResource( 117 ), SubResource( 118 ), SubResource( 119 ), SubResource( 120 ) ],
"loop": true,
"name": "padagra",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=122]
radius = 179.81
height = 642.201

[sub_resource type="Animation" id=123]
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 180, 0 ) ]
}

[sub_resource type="Animation" id=124]
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 180, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=125]
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 320, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=126]
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 320, 0 ) ]
}

[node name="Peasant" type="Area2D"]
pause_mode = 2
position = Vector2( 300, 0 )
scale = Vector2( 0.35, 0.35 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -10.5263, 6.3158 )
frames = SubResource( 121 )
animation = "healthyDeath"
frame = 9
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -6.81628, 29.537 )
shape = SubResource( 122 )

[node name="enter" type="AnimationPlayer" parent="."]
anims/enter = SubResource( 123 )

[node name="exit" type="AnimationPlayer" parent="."]
anims/exit = SubResource( 124 )

[node name="exit_head" type="AnimationPlayer" parent="."]
anims/exit_head = SubResource( 125 )

[node name="enter_head" type="AnimationPlayer" parent="."]
anims/enter_head = SubResource( 126 )

[node name="voice_talk1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 17 )

[node name="voice_talk2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 18 )

[node name="voice_talk3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 19 )

[node name="voice_talk4" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 21 )

[node name="voice_talk5" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 20 )

[node name="voice_talk6" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 22 )

[node name="fallTalk" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 25 )

[node name="deathTalk1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 27 )

[node name="deathTalk2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 26 )

[node name="fail" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 24 )

[node name="success" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 23 )

[node name="voice_health" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 16 )
[connection signal="input_event" from="." to="." method="_on_Peasant_input_event"]
[connection signal="animation_finished" from="enter" to="." method="_on_enter_animation_finished"]
[connection signal="animation_finished" from="exit" to="." method="_on_exit_animation_finished"]
[connection signal="animation_finished" from="exit_head" to="." method="_on_exit_head_animation_finished"]
[connection signal="animation_finished" from="enter_head" to="." method="_on_enter_head_animation_finished"]
